Fix layout bug

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -46,7 +46,6 @@ body {
   border-bottom: 1px solid #333335;
   min-height: 60px;
   padding: 0 16px;
-  position: relative;
 }
 
 .nav h1 {
